# Linear-Spin-Wave-Theory

./: .gitignore  2_U_symmetry_YV.py  3_search_phase_diagram.py  4_Pseudo_Gap.py  AGENTS.md  ARCHITECTURE_REFINED.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  README.md  modified_do_it.py  pyproject.toml
GOVERNMENT/Agents-Bylaws/: map-agents-bylaws.md
GOVERNMENT/Agents-Bylaws/policies/: directory-structure-guide.md  (+4 more)
GOVERNMENT/Court-Precedents/: map-decisions.md
GOVERNMENT/User-Constitution/: map-user-constitution.md
GOVERNMENT/Working-Pad/: TASK-QUEUE.md  map-working-pad.md  roadmap.md
code-space/tests/: __init__.py
doc-space/examples/: nbcp_ground_state.py  nbcp_hamiltonian_check.py  phase1a_demo.py
docs/: note.aux  note.out  note.tex  note.toc  note_lswt_reviewed.tex
docs/theory/: README.md  figures  notation.md  process_sections.py
examples/: nbcp_ground_state.py  phase1a_demo.py
legacy/modules/: constants.py  requirements.txt
legacy/scripts/: 1_do_it_swt.py
lswt/: __init__.py  config.py
lswt/core/: __init__.py  exchange.py  spin_system.py
lswt/observables/: bose_statistics.py
lswt/solvers/: energy.py  hamiltonian.py  optimizer.py
modules/: result_repository.py
modules/LinearSpinWaveTheory/: lswt_Hamiltonian.py
modules/PhaseDiagram/: file_io.py  phase_diagram.py  visualization.py
modules/Plotters/: spin_system_visualizer.py  updated_band_plotter.py
modules/Tools/: analysis_tools.py  diagonalization.py  find_first_bz.py
research-space/notes/: .chktexrc  note_lswt_restructured.tex
research-space/theory/: README.md  notation.md
(+121 files in other folders)
