[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lswt"
version = "0.2.dev0"
description = "Linear Spin Wave Theory for 2D quantum magnets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Sung-Min Park", email = "sungmin.park.0226@gmail.com"},
]
keywords = ["condensed matter", "magnetism", "spin waves", "magnons", "LSWT"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/sungmin-park0226/Linear-Spin-Wave-Theory"
Repository = "https://github.com/sungmin-park0226/Linear-Spin-Wave-Theory"

[tool.setuptools.packages.find]
where = ["code-space"]
include = ["lswt*"]
exclude = ["modules*", "tests*", "examples*", "docs*"]
